:sparkles: feat(security): refactor authentication flow with JWT service, custom user details, and updated security configuration