@@ -3,7 +3,7 @@ package com.example.autolog.infrastructure.security.config;
 import com.example.autolog.infrastructure.security.entrypoint.CustomAuthenticationEntryPoint;
 import com.example.autolog.infrastructure.security.filter.SecurityFilter;
 import com.example.autolog.presentation.handler.CustomAccessDeniedHandler;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -22,22 +22,19 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author Rene
  */
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfigurations {
 
-    @Autowired
-    SecurityFilter securityFilter;
-
-    @Autowired
-    CustomAccessDeniedHandler accessDeniedHandler;
-
-    @Autowired
-    CustomAuthenticationEntryPoint authenticationEntryPoint;
+    private final SecurityFilter securityFilter;
+    private final CustomAccessDeniedHandler accessDeniedHandler;
+    private final CustomAuthenticationEntryPoint authenticationEntryPoint;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
@@ -50,33 +47,71 @@ public class SecurityConfigurations {
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers(HttpMethod.GET, "/", "/static/**", "/index.html", "/favicon.ico", "/manifest.json", "/robots.txt").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/{path:[^\\.]*}").permitAll()
+
+                        // Public frontend/static routes
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/",
+                                "/index.html",
+                                "/favicon.ico",
+                                "/manifest.json",
+                                "/robots.txt",
+                                "/static/**",
+                                "/assets/**"
+                        ).permitAll()
+
+                        // Public auth routes
                         .requestMatchers(HttpMethod.POST, "/auth/login").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/auth/register").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/auth/register-admin").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/auth/forgot-password", "/auth/reset-password").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/auth/workshops").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/auth/forgot-password").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/auth/reset-password").permitAll()
                         .requestMatchers(HttpMethod.GET, "/auth/reset-password").permitAll()
+
+                        // Public utility routes
                         .requestMatchers(HttpMethod.GET, "/buscar-endereco/{cep}").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/parts").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/parts").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/parts/{id}").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/parts/{id}").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/parts/{id}").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/users").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/users/{id}").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/users/{id}").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/users/{id}").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.POST, "/users/{userId}/cars").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/users/{userId}/cars").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/users/{userId}/cars").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/users/{userId}/cars").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.POST,"/users/{userId}/cars/{carId}/maintenance").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.GET,"/users/{userId}/cars/{carId}/maintenance").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.PUT,"/users/{userId}/cars/{carId}/maintenance").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.GET,"/users/{userId}/cars/{carId}/maintenance/{maintenanceId}").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.PUT,"/users/{userId}/cars/{carId}/maintenance/{maintenanceId}").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.DELETE,"/users/{userId}/cars/{carId}/maintenance/{maintenanceId}").hasAnyRole("USER", "ADMIN")
+
+                        // Swagger/OpenAPI routes
+                        .requestMatchers(
+                                "/swagger-ui/**",
+                                "/v3/api-docs/**",
+                                "/swagger-ui.html"
+                        ).permitAll()
+
+                        // User management
+                        .requestMatchers(HttpMethod.POST, "/users").hasAnyRole("OWNER", "ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/users").hasAnyRole("OWNER", "ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/users/{id}").hasAnyRole("OWNER", "ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/users/{id}").hasAnyRole("OWNER", "ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/users/{id}").hasRole("OWNER")
+
+                        // Customers
+                        .requestMatchers(HttpMethod.POST, "/customers").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/customers").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/customers/{id}").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.PUT, "/customers/{id}").hasAnyRole("OWNER", "ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/customers/{id}").hasAnyRole("OWNER", "ADMIN")
+
+                        // Vehicles
+                        .requestMatchers(HttpMethod.POST, "/vehicles").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/vehicles").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/vehicles/{id}").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.PUT, "/vehicles/{id}").hasAnyRole("OWNER", "ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/vehicles/{id}").hasAnyRole("OWNER", "ADMIN")
+
+                        // Maintenances
+                        .requestMatchers(HttpMethod.POST, "/maintenances").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/maintenances").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/maintenances/{id}").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.PUT, "/maintenances/{id}").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.DELETE, "/maintenances/{id}").hasAnyRole("OWNER", "ADMIN")
+
+                        // Parts
+                        .requestMatchers(HttpMethod.POST, "/parts").hasAnyRole("OWNER", "ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/parts").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/parts/{id}").hasAnyRole("OWNER", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.PUT, "/parts/{id}").hasAnyRole("OWNER", "ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/parts/{id}").hasAnyRole("OWNER", "ADMIN")
+
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(securityFilter, UsernamePasswordAuthenticationFilter.class)
@@ -84,23 +119,53 @@ public class SecurityConfigurations {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration authenticationConfiguration
+    ) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
     @Bean
-    public PasswordEncoder passwordEncoder(){
+    public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("*"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:3000",
+                "http://localhost:4200",
+                "http://localhost:5173"
+        ));
+
+        configuration.setAllowedMethods(List.of(
+                "GET",
+                "POST",
+                "PUT",
+                "PATCH",
+                "DELETE",
+                "OPTIONS"
+        ));
+
+        configuration.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin"
+        ));
+
+        configuration.setExposedHeaders(List.of(
+                "Authorization"
+        ));
+
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 
